- profile.polr() now works for a single-coefficient model.
- The print and print.summary methods for polr and rlm make use of
  naprint() to print a message e.g. about deleted observations.
- Class "ridgelm" now has a coef() method, and works for n < p.
- lda() and qda() now check explicitly for non-finite 'x' values.
- ch06.R has been updated for multcomp >= 0.991-1
- profile.glm is more likely to find the model frame in complicated
  scopes.
- message() is used for most messages.
- truehist() checks more thoroughly for erroneous inputs.
- polr(model=TRUE) works again.
- add logLik() method for polr.
- the summary() methods for classes "negbin" and "rlm" now default to
  correlation = FALSE.
- there is a vcov() method for class "negbin": unlike the "glm" method
  this defaults to dispersion = 1.
- coding for 'sex' in ?Melanoma has been corrected.
- the example for gamma.shape has a better starting point and so converges
- avoid abbreviation of survreg(dist=) in example(gehan)
- profile() and confint() methods for "glm" objects now handle
  rank-deficient fits.
- profile.glm() produced an output in a format plot.profile could not
  read for single-variable fits.  Also for confint() on intercept-only
  fits.
- The print() methods for fitdistr() and lm.ridge() now return invisibly.
- vcov() and profile() methods for polr() used starting values in the
  external not internal parametrization, which could slow convergence.
- glm.nb() called theta.ml() incorrect when weights were supplied whch did not
  sum to n.
- removed unused argument 'nseg' to plot.profile.
- 'alpha' in the "glm" and "polr" methods for profile() is now interpreted
  as two-tailed univariate for consistency with other profile methods.
- 'mammals': corrected typos in names, some thanks to Arni Magnusson
- profile.glm() now works for binomial glm specified with a matrix response
  and a cmpletely zero row.
- there is a "negbin" method for simulate()