@@ -181,6 +181,8 @@ Library MASS
 - profile.glm() now works for binomial glm specified with a matrix response
   and a cmpletely zero row.
 - there is a "negbin" method for simulate()
+- the use of package mclust has been removed from the ch11.R script
+  because of the change of licence conditions for that package.
 
 
 Library class
@@ -214,6 +216,8 @@ Library nnet
 - summary() for multinom now defaults to correlation=FALSE.
 - nnet() reports on 'convergence'.
 - confint.multinom() works better with a non-default 'parm'
+- multinom() and nnet(softmax=TRUE) give an explicit error message for
+  one-category responses.
 
 
 
